@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -74,7 +76,7 @@ public class CompressedNullCheckTest extends HotSpotGraalCompilerTest {
 
     @Test
     public void implicit() {
-        testImplicit(new Integer(1));
+        testImplicit(Integer.valueOf(1));
     }
 
     @Test
@@ -84,7 +86,7 @@ public class CompressedNullCheckTest extends HotSpotGraalCompilerTest {
 
     @Test
     public void explicit() {
-        testExplicit(new Integer(1));
+        testExplicit(Integer.valueOf(1));
     }
 
     @Test
