@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -125,12 +127,12 @@ public class LargeConstantSectionTest extends JTTTest {
                 for (int i = 0; i < labels.length; i++) {
                     mv.visitLabel(labels[i]);
                     mv.visitFrame(Opcodes.F_NEW, 1, new Object[]{Opcodes.INTEGER}, 0, new Object[]{});
-                    mv.visitLdcInsn(new Long(LARGE_CONSTANT + i));
+                    mv.visitLdcInsn(Long.valueOf(LARGE_CONSTANT + i));
                     mv.visitInsn(LRETURN);
                 }
                 mv.visitLabel(defaultLabel);
                 mv.visitFrame(Opcodes.F_NEW, 1, new Object[]{Opcodes.INTEGER}, 0, new Object[]{});
-                mv.visitLdcInsn(new Long(3L));
+                mv.visitLdcInsn(Long.valueOf(3L));
                 mv.visitInsn(LRETURN);
                 Label end = new Label();
                 mv.visitLabel(end);
