@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -76,8 +78,8 @@ public class HeapPolicy {
 
         Object result;
         try {
-            result = policy.newInstance();
-        } catch (InstantiationException | IllegalAccessException ex) {
+            result = policy.getDeclaredConstructor().newInstance();
+        } catch (Exception ex) {
             throw UserError.abort("policy " + className + " cannot be instantiated.");
         }
 
@@ -90,17 +92,24 @@ public class HeapPolicy {
     /*
      * Instance field access methods.
      */
-
     CollectOnAllocationPolicy getCollectOnAllocationPolicy() {
         return collectOnAllocationPolicy;
     }
 
-    public static Word getProducedHeapChunkZapValue() {
-        return producedHeapChunkZapValue;
+    public static Word getProducedHeapChunkZapWord() {
+        return producedHeapChunkZapWord;
     }
 
-    public static Word getConsumedHeapChunkZapValue() {
-        return consumedHeapChunkZapValue;
+    public static int getProducedHeapChunkZapInt() {
+        return producedHeapChunkZapInt;
+    }
+
+    public static Word getConsumedHeapChunkZapWord() {
+        return consumedHeapChunkZapWord;
+    }
+
+    public static int getConsumedHeapChunkZapInt() {
+        return consumedHeapChunkZapInt;
     }
 
     /*
@@ -301,10 +310,12 @@ public class HeapPolicy {
     }
 
     /* - The value to use for zapping produced chunks. */
-    private static final Word producedHeapChunkZapValue = WordFactory.unsigned(0xbaadbeefbaadbeefL);
+    private static final int producedHeapChunkZapInt = 0xbaadbeef;
+    private static final Word producedHeapChunkZapWord = WordFactory.unsigned((long) producedHeapChunkZapInt << 32 | producedHeapChunkZapInt);
 
     /* - The value to use for zapping. */
-    private static final Word consumedHeapChunkZapValue = WordFactory.unsigned(0xdeadbeefdeadbeefL);
+    private static final int consumedHeapChunkZapInt = 0xdeadbeef;
+    private static final Word consumedHeapChunkZapWord = WordFactory.unsigned((long) consumedHeapChunkZapInt << 32 | consumedHeapChunkZapInt);
 
     static final AtomicUnsigned bytesAllocatedSinceLastCollection = new AtomicUnsigned();
 
