@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -146,7 +148,7 @@ public class MethodGuardsWithArgumentsTest {
     abstract static class MArgumentsDouble0 extends ValueNode {
 
         static boolean guard(int a1, Object a2) {
-            return a1 == 42 && a2.equals(new Integer(42));
+            return a1 == 42 && a2.equals(Integer.valueOf(42));
         }
 
         @Specialization(guards = "guard(a,a)")
@@ -203,7 +205,7 @@ public class MethodGuardsWithArgumentsTest {
     abstract static class MArgumentsDouble3 extends ValueNode {
 
         static boolean guard(Object a1, double a2) {
-            return new Double(41.0).equals(a1) && a2 == 41;
+            return Double.valueOf(41.0).equals(a1) && a2 == 41;
         }
 
         @Specialization(guards = "guard(b,b)")
@@ -218,7 +220,7 @@ public class MethodGuardsWithArgumentsTest {
             return true;
         }
 
-        @ExpectError("Error parsing expression 'guard(': -- line 1 col 7: \")\" expected%")
+        @ExpectError("Error parsing expression 'guard(': line 1:6 mismatched input%")
         @Specialization(guards = "guard(")
         int do1() {
             return 42;
@@ -231,7 +233,7 @@ public class MethodGuardsWithArgumentsTest {
             return true;
         }
 
-        @ExpectError("Error parsing expression 'guard)': -- line 1 col 6: EOF expected%")
+        @ExpectError("Error parsing expression 'guard)': line 1:5 extraneous input%")
         @Specialization(guards = "guard)")
         int do1() {
             return 42;
